--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ langgraph==0.2.74
 langsmith
 langchain-openai
 langchain-community
+langchain-tavily
 langchain-experimental
 tavily-python 
 pandas 
@@ -9,3 +10,4 @@ openai
 requests
 azure-identity
 IPython
+azure-ai-agentserver-agentframework
